--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <section id="home">
-		<img src="banner.jpg" >
+		<img src="https://media.istockphoto.com/id/1221418765/photo/table-filled-with-large-variety-of-food.jpg?s=612x612&w=0&k=20&c=ty_poYWXSxs6XRGUmYwgmJYwNDIes1xOO555ZmPk6qE=" >
         <!-- Add images here -->
     </section>
 
